RESOLVED FIXED163153
Non-special URL fragments should percent-encode non-ASCII characters
https://bugs.webkit.org/show_bug.cgi?id=163153
Summary Non-special URL fragments should percent-encode non-ASCII characters
Alex Christensen
Reported 2016-10-07 16:00:11 PDT
Non-special URL fragments should percent-encode non-ASCII characters
Attachments
Patch (6.42 KB, patch)
2016-10-07 16:02 PDT, Alex Christensen
thorton: review+
Alex Christensen
Comment 1 2016-10-07 16:02:28 PDT
WebKit Commit Bot
Comment 2 2016-10-07 16:05:02 PDT
Attachment 290979 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2016-10-07 16:08:32 PDT
r+ is predicated on the better changelog entry.
Alex Christensen
Comment 4 2016-10-07 16:09:17 PDT
Note You need to log in before you can comment on or make changes to this bug.